@@ -45,6 +45,7 @@ export(posciteL)
 export(possciteL)
 export(presentation)
 export(QC)
+export(QP)
 export(QQ)
 export(rdirs)
 export(reveal.js)
