@@ -38,8 +38,7 @@
 #' submission.
 #' @export
 doc_temp <- 
-function(temp.name = "newDoc", doc.type = "rnw", path = getwd(), 
-    open = is.global()) {
+function(temp.name = "newDoc", doc.type = "rnw", path = getwd()) {
 	
 	if (!any(doc.type %in% c("doc", "rnw", "tex", "rmd"))) {
 	    stop("doc.type must be one of the following: \"doc\", \"rnw\", \"tex\" or \"rmd\"")	
