@@ -129,6 +129,10 @@ And constructed with the following guidelines:
   slide notes without an Internet connection. (Thanks to Dason Kurkiewicz for
   creating the .sh/.bat files generated by these functions).
 
+* `QP` convenience function added as a wrapper for `file.path` and `getwd`.  The 
+  user only needs to type the name of directory or nested directories that are 
+  contained within the working directory and a complete path is given.
+
 
 IMPROVEMENTS
 
